@@ -11,8 +11,6 @@ package com.java.z_exam.sync;
 
 import org.openjdk.jol.info.ClassLayout;
 
-import java.util.concurrent.TimeUnit;
-
 /**
  * 假如锁处于偏向状态，这时来了竞争者，那么他的状态是什么？
  * 无锁：001
@@ -20,24 +18,16 @@ import java.util.concurrent.TimeUnit;
  * 偏向锁：101
  * 重量级锁：10
  */
-// -XX:-UseBiasedLocking  禁用偏向锁，默认开启
-// -XX:BiasedLockingStartupDelay=0  提前启动偏向锁，默认系统启动4秒钟后启用偏向锁
-public class T04_HelloJOL {
+
+public class T04_HelloJOLV2 {
     public static void main(String[] args) throws Exception {
-        //TimeUnit.SECONDS.sleep(5);
-
-        A o = new A();
-        //Object o = new Object();
+        MyA o = new MyA();
         System.out.println(ClassLayout.parseInstance(o).toPrintable());
-
-//        synchronized (o) { // 锁定这个对象
-//            System.out.println(ClassLayout.parseInstance(o).toPrintable());
-//        }
     }
 }
 
-class A {
-    int a = 1;
+class MyA {
+    // 对象头占用12个字节，但由于不是以8位单位，会自动填充4位，达到大小16位
 }
 /*
 通过new A() 创建一个对象的内存占用如下：
